examples/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infer
  labels:
    inference-gateway.com/managed: "true"
