examples/kubernetes/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: infer-gateway-class
spec:
  controllerName: "infragateway.io/gateway-controller"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infer-gateway
  namespace: infer-system
spec:
  gatewayClassName: infer-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-gateway-route
  namespace: infer-system
spec:
  parentRefs:
    - name: infer-gateway
  rules:
    - backendRefs:
        - name: inference-gateway
          port: 8080
